--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+  # Calendar dependency
+  table_calendar: ^2.3.0
+
+  shared_preferences: ^0.5.12+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # Calendar dependency
-  table_calendar: ^2.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
